Remove unnecessary |show_on_tap_for_empty_editable| flag

This flag used to used by aura but is now only set to false. This
change removes the flag.

BUG=636481

Review-Url: https://codereview.chromium.org/2230413002
Cr-Commit-Position: refs/heads/master@{#412024}

Former-commit-id: add0668da5a805a55086676b0933da685574a0f3