ui/touch_selection/touch_selection_controller.h
@@ -64,12 +64,6 @@ class UI_TOUCH_SELECTION_EXPORT TouchSelectionController
     // Controls whether drag selection after a longpress is enabled.
     // Defaults to false.
     bool enable_longpress_drag_selection;
-
-    // Controls whether an insertion handle is shown on a tap for an empty
-    // editable text. Defauls to false.
-    // TODO(mohsen): This flag used to be set to |true| on Aura. That's not the
-    // case anymore and it is always |false|. Consider removing it.
-    bool show_on_tap_for_empty_editable;
   };
 
   TouchSelectionController(TouchSelectionControllerClient* client,
